--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,11 @@ repositories {
 
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+  testImplementation 'org.mockito:mockito-core:4.8.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 test {
     useJUnitPlatform()
 }
+
